--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ingenio.mensajeriasda"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 9
-        versionName "1.9.0"
+        versionCode 10
+        versionName "1.10.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -33,13 +33,15 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
     implementation 'org.apache.httpcomponents:httpmime:4.5.6'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    //noinspection DuplicatePlatformClasses
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
     implementation 'com.github.nkzawa:socket.io-client:0.4.0'
-    /*implementation ('io.socket:socket.io-client:2.0.0'){
-        exclude group: 'org.json', module:'json'
-    }*/
+
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
     testImplementation 'junit:junit:4.12'
