--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,10 +34,18 @@
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".AlarmReceiver"
+            android:enabled="true"/>
+        <receiver android:name=".AlarmReceiver2"
+            android:enabled="true"/>
         <service android:name=".BackgroundJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:enabled="true"
             android:exported="true"/>
+        <service android:name=".NotificationService"
+            android:enabled="true"/>
+        <service android:name=".NotificationService2"
+            android:enabled="true"/>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -45,8 +53,16 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
 </manifest>
