--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.ingenio.mensajeriasda"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 24
-        versionName "2.2.0"
+        versionCode 26
+        versionName "2.3.0"
         //version 24 = 24-2=22= 2.2
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -50,6 +50,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-analytics:16.0.0'
     implementation "com.google.android.gms:play-services-auth:15.0.1"
+
+    implementation 'net.gotev:uploadservice:2.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
