--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:largeHeap="true"
         android:exported="false"
         android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -35,6 +36,13 @@
         <activity android:name=".controler.PagosManager"></activity>
         <activity android:name=".controler.MapsActivity" android:screenOrientation="portrait"></activity>
         <activity android:name=".controler.TomarFoto"></activity>
+        <!--<activity android:name="com.ingenio.mensajeriasda.controler.ShareActivity">
+            <intent-filter tools:ignore="AppLinkUrlError">
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*" />
+            </intent-filter>
+        </activity>-->
         <receiver android:name=".BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
